--- a/external/engine/CMakeLists.txt
+++ b/external/engine/CMakeLists.txt
@@ -3,17 +3,25 @@ project(myengine VERSION 0.0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_library(${PROJECT_NAME} src/engine.cpp)
+add_subdirectory(external/glm)
+add_subdirectory(external/glfw)
+
+file(GLOB SOURCES "src/*.cpp", "src/**/*.cpp")
+
+add_library(${PROJECT_NAME} ${SOURCES})
 
 target_include_directories(${PROJECT_NAME}
     PUBLIC
         $<INSTALL_INTERFACE:include>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+        glm
     PRIVATE
+        glfw
 )
 
 target_link_libraries(${PROJECT_NAME}
     PUBLIC
-
+        glm
     PRIVATE
+        glfw
 )
