--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external/engine/glm"]
 	path = external/engine/external/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "external/engine/external/vk-bootstrap"]
+	path = external/engine/external/vk-bootstrap
+	url = https://github.com/charles-lunarg/vk-bootstrap.git
