--- a/external/engine/CMakeLists.txt
+++ b/external/engine/CMakeLists.txt
@@ -5,8 +5,11 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_subdirectory(external/glm)
 add_subdirectory(external/glfw)
+add_subdirectory(external/vk-bootstrap)
 
-file(GLOB SOURCES "src/*.cpp", "src/**/*.cpp")
+find_package(Vulkan REQUIRED)
+
+file(GLOB_RECURSE SOURCES "src/*.cpp")
 
 add_library(${PROJECT_NAME} ${SOURCES})
 
@@ -16,12 +19,17 @@ target_include_directories(${PROJECT_NAME}
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         glm
     PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/src
+        ${Vulkan_INCLUDE_DIRS}
         glfw
+        vk-bootstrap
 )
 
 target_link_libraries(${PROJECT_NAME}
     PUBLIC
         glm
     PRIVATE
+        ${Vulkan_LIBRARIES}
         glfw
+        vk-bootstrap
 )
