--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,13 @@ cmake_minimum_required(VERSION 3.5)
 project(youtube_cpp_application VERSION 0.0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
+# 编译选项
+if(MSVC)
+  add_compile_options( /W4 /WX)
+else()
+  #  add_compile_options (-fdiagnostics-color=always) #GNU
+  add_compile_options(-w -fcolor-diagnostics) #Clang
+endif()
 
 add_subdirectory(external/engine)
 
