--- a/external/engine/CMakeLists.txt
+++ b/external/engine/CMakeLists.txt
@@ -35,3 +35,17 @@ target_link_libraries(${PROJECT_NAME}
         glfw
         vk-bootstrap
 )
+
+# SHADER COMPILATION
+
+file (GLOB SHADERS shaders/*.frag shaders/*.vert)
+
+add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD
+ COMMAND mkdir -p ${CMAKE_BINARY_DIR}/shaders)
+
+foreach(shader ${SHADERS})
+    get_filename_component(SHADER_NAME ${shader} NAME)
+    message(STATUS "Compiling ${SHADER_NAME} -c ${shader}")
+    add_custom_command(TARGET ${PROJECT_NAME}
+        PRE_BUILD COMMAND glslc -o ${CMAKE_BINARY_DIR}/shaders/${SHADER_NAME}.spv -c ${shader})
+endforeach()
