--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "external/engine/external/glfw"]
-	path = external/engine/external/glfw
+	path = engine/external/glfw
 	url = https://github.com/glfw/glfw.git
 [submodule "external/engine/glm"]
-	path = external/engine/external/glm
+	path = engine/external/glm
 	url = https://github.com/g-truc/glm.git
 [submodule "external/engine/external/vk-bootstrap"]
-	path = external/engine/external/vk-bootstrap
+	path = engine/external/vk-bootstrap
 	url = https://github.com/charles-lunarg/vk-bootstrap.git
 [submodule "external/engine/external/SDL"]
-	path = external/engine/external/SDL
+	path = engine/external/SDL
 	url = https://github.com/libsdl-org/SDL.git
